authentication parcialmente terminada

--- a/src/app/pages/authentication/components/socials/socials.component.html
+++ b/src/app/pages/authentication/components/socials/socials.component.html
@@ -1,9 +1,9 @@
 <section class="flex items-center justify-center space-x-4">
-  <p-button styleClass="p-button-outlined p-button-primary shadow-lg shadow-yellow-500/50">
+  <p-button styleClass="p-button-outlined p-button-primary shadow-lg shadow-yellow-500/50" (click)="withGoogle()">
     <i class="pi pi-google"></i>
     <span class="font-semibold">oogle</span>
   </p-button>
-  <p-button styleClass="p-button-outlined p-button-info shadow-lg shadow-indigo-500/50">
+  <p-button styleClass="p-button-outlined p-button-info shadow-lg shadow-indigo-500/50" (click)="withFacebook()">
     <i class="pi pi-facebook"></i>
     <span class="font-semibold">acebook</span>
   </p-button>
