--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,10 @@
 .p-card-body {
   width: 100%;
 }
+.error__messages {
+  position: absolute;
+  bottom: -1.3rem;
+  right: 0;
+  color: red;
+  font-weight: 600;
+}
