--- a/src/app/pages/authentication/pages/register/register.component.html
+++ b/src/app/pages/authentication/pages/register/register.component.html
@@ -1,26 +1,51 @@
 <app-card>
-  <form class="w-full flex flex-col gap-6 justify-center items-center pt-5">
+  <form class="w-full flex flex-col gap-6 justify-center items-center pt-5" [formGroup]="form!" (ngSubmit)="onSubmit()">
     <span class="p-float-label p-input-icon-left w-full max-w-sm">
       <i class="pi pi-user"></i>
-      <input id="email" type="text" pInputText class="w-full" />
+      <input id="email" type="text" pInputText class="w-full" formControlName="email" />
       <label for="email">Email</label>
+
+      <div class="error__messages" *ngIf="formValidatorService.isInvalid('email')">
+        <small *ngIf="form.get('email')?.hasError('email')">El email es inválido</small>
+        <small *ngIf="form.get('email')?.hasError('required')">El email es requerido</small>
+      </div>
     </span>
 
     <span class="p-float-label p-input-icon-left w-full max-w-sm">
       <i class="pi pi-key"></i>
-      <input id="password" type="password" pInputText class="w-full" />
+      <input id="password" type="password" pInputText class="w-full" formControlName="password" />
       <label for="password">Contraseña</label>
       <span appTogglePassword></span>
+
+      <div class="error__messages" *ngIf="formValidatorService.isInvalid('password')">
+        <small *ngIf="form.get('password')?.hasError('required')">Campo requerido</small>
+        <small *ngIf="form.get('password')?.hasError('minlength')">Mínimo de caracteres 8</small>
+      </div>
     </span>
 
-    <span class="p-float-label p-input-icon-left w-full">
+    <span class="p-float-label p-input-icon-left w-full max-w-sm">
       <i class="pi pi-key"></i>
-      <input id="password" type="password" pInputText class="w-full" />
-      <label for="password">Confirmar contraseña</label>
+      <input id="confirmPassword" type="password" pInputText class="w-full" formControlName="confirmPassword" />
+      <label for="confirmPassword">Confirmar contraseña</label>
       <span appTogglePassword></span>
+
+      <div class="error__messages" *ngIf="formValidatorService.isInvalid('confirmPassword')">
+        <small *ngIf="form.get('confirmPassword')?.hasError('required')">Campo requerido</small>
+        <small *ngIf="form.get('confirmPassword')?.hasError('minlength')">Mínimo de caracteres 8</small>
+      </div>
+
+      <div class="error__messages" *ngIf="form.invalid && (form.dirty || form.touched)">
+        <small
+          *ngIf="
+          !form.get('confirmPassword')?.hasError('required') && 
+          !form.get('confirmPassword')?.hasError('minlength') && 
+          form.errors?.['confirmPassword']"
+          >Las contraseñas no coinciden</small
+        >
+      </div>
     </span>
 
-    <button pButton type="submit" class="p-button-text shadow-lg shadow-gray-900/80">
+    <button pButton type="submit" class="p-button-text shadow-lg shadow-gray-900/80" [disabled]="form.invalid">
       <i class="pi pi-arrow-circle-right text-5xl"></i>
     </button>
   </form>
