--- a/src/app/pages/authentication/components/card/card.component.html
+++ b/src/app/pages/authentication/components/card/card.component.html
@@ -1,5 +1,5 @@
 <p-card
-  styleClass="p-shadow-13 w-screen h-screen shadow-lg shadow-gray-800 lg:w-[380px] lg:h-[430px] xl:backdrop-blur-sm xl:bg-white/10 "
+  styleClass="w-screen h-screen shadow-lg shadow-gray-800 lg:w-[380px] lg:h-[430px] xl:backdrop-blur-sm xl:bg-white/10 "
 >
   <ng-template pTemplate="header">
     <img alt="card-header" src="assets/images/background/authentication.jpg" class="lg:hidden max-h-60 object-cover" />
