finished categories style

--- a/src/app/pages/dashboard/components/recharge-videogame/recharge-videogame.component.html
+++ b/src/app/pages/dashboard/components/recharge-videogame/recharge-videogame.component.html
@@ -12,8 +12,13 @@
       </div>
 
       <div class="p-field max-w-xl mx-auto">
-        <label>TELÉFONO DESTINO</label>
-        <input type="number" required pInputText />
+        <label>ID DEL JUGADOR</label>
+        <input type="text" required pInputText />
+      </div>
+
+      <div class="p-field max-w-xl mx-auto">
+        <label>CAMPO EDITABLE</label>
+        <input type="text" required pInputText />
       </div>
 
       <div class="p-field w-full text-center">
