--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,26 +1,3 @@
-<section class="main__content p-5 flex flex-wrap justify-center gap-4">
-  <p-card styleClass="shadow-sm shadow-gray-800 w-[350px] h-[450px]">
-    <ng-template pTemplate="header">
-      <img alt="card-header" src="assets/images/background/authentication.jpg" />
-    </ng-template>
-
-    <section class="text-center">
-      <button
-        pButton
-        type="button"
-        label="RECARGAR SALDO"
-        class="p-button-secondary"
-        (click)="rechargeBalance()"
-      ></button>
-      <p-divider></p-divider>
-    </section>
-
-    <ng-template pTemplate="footer">
-      <section class="text-center">
-        <p-chip label="MOVISTAR" styleClass="mr-2"></p-chip>
-        <p-chip label="MOVILNET" styleClass="mr-2"></p-chip>
-        <p-chip label="DIGITEL" styleClass="mr-2"></p-chip>
-      </section>
-    </ng-template>
-  </p-card>
+<section class="main__content">
+  <router-outlet></router-outlet>
 </section>
