--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.main__content {
+  min-height: 95vh;
+  background: url(/assets/images/background/blob.svg) no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
+
 .p-card-body {
   width: 100%;
 }
