--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -12,12 +12,12 @@
 
   <div class="p-toolbar-group-right">
     <p-splitButton
-      label="Marcos Velasquez"
+      [label]="user?.displayName"
       icon="pi pi-user"
       [model]="items"
       styleClass="p-button-secondary"
     ></p-splitButton>
-    <p-avatar label="P" styleClass="mx-5" size="large"></p-avatar>
+    <p-avatar [label]="user?.displayName.charAt(0) || 'I'" styleClass="mx-5" size="large"></p-avatar>
   </div>
 </p-toolbar>
 
