--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-toolbar *ngIf="isUserLogin"></app-toolbar>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 <p-toast position="top-right"></p-toast>
