--- a/src/app/core/components/pick-list/pick-list.component.html
+++ b/src/app/core/components/pick-list/pick-list.component.html
@@ -8,20 +8,21 @@
   [showSourceControls]="false"
   [showTargetFilter]="false"
   [showSourceFilter]="false"
+  (onMoveToTarget)="onMoveToTarget()"
+  (onMoveToSource)="onMoveToSource()"
+  (onMoveAllToTarget)="onMoveToTarget()"
+  (onMoveAllToSource)="onMoveToSource()"
 >
   <ng-template let-product pTemplate="item">
-    <div class="product-item">
-      <div class="image-container">
-        <img [src]="product.image" [alt]="product.name" class="product-image" />
-      </div>
+    <div class="product-item font-bold uppercase">
       <div class="product-list-detail">
         <h5 class="p-mb-2">{{ product.name }}</h5>
       </div>
       <div class="product-list-action">
-        <h6 class="p-mb-2">${{ product.price }}</h6>
+        <h6 class="p-mb-2">${{ product?.price }}</h6>
       </div>
     </div>
   </ng-template>
 </p-pickList>
 
-<p class="font-bold text-2xl">220$</p>
+<p class="font-bold text-2xl">{{ total }}</p>
