--- a/src/app/core/components/pick-list/pick-list.component.scss
+++ b/src/app/core/components/pick-list/pick-list.component.scss
@@ -3,12 +3,8 @@
   align-items: center;
   padding: 0.5rem;
   width: 100%;
-
-  img {
-    width: 75px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    margin-right: 1rem;
-  }
+  justify-content: space-between;
+  text-align: initial;
 
   .product-list-detail {
     flex: 1 1 0;
@@ -34,15 +30,5 @@
 @media screen and (max-width: 576px) {
   .product-item {
     flex-wrap: wrap;
-
-    .image-container {
-      width: 100%;
-      text-align: center;
-    }
-
-    img {
-      margin: 0 0 1rem 0;
-      width: 100px;
-    }
   }
 }
