--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -12,17 +12,12 @@
 
   <div class="p-toolbar-group-right">
     <p-splitButton
-      [label]="user?.displayName || user?.email"
+      [label]="user | credentialLabel"
       icon="pi pi-user"
       [model]="items"
       styleClass="p-button-secondary"
     ></p-splitButton>
-    <p-avatar
-      [label]="user?.displayName?.charAt(0) || user?.email?.charAt(0)"
-      styleClass="mx-5"
-      size="large"
-      class="uppercase"
-    ></p-avatar>
+    <p-avatar [label]="user | avatarLabel" styleClass="mx-5" size="large" class="uppercase"></p-avatar>
   </div>
 </p-toolbar>
 
