--- a/src/app/core/components/input-phone/input-phone.component.html
+++ b/src/app/core/components/input-phone/input-phone.component.html
@@ -6,7 +6,7 @@
   [enablePlaceholder]="true"
   [searchCountryFlag]="true"
   [phoneValidation]="true"
-  [separateDialCode]="true"
+  [separateDialCode]="false"
   [numberFormat]="PhoneNumberFormat.National"
   [(ngModel)]="currentValue"
   (ngModelChange)="onChange()"
