eliminando codigo duplicado

--- a/src/app/core/components/input-phone/input-phone.component.html
+++ b/src/app/core/components/input-phone/input-phone.component.html
@@ -8,7 +8,7 @@
   [phoneValidation]="true"
   [separateDialCode]="false"
   [numberFormat]="PhoneNumberFormat.National"
-  [(ngModel)]="currentValue"
+  [(ngModel)]="value"
   (ngModelChange)="onChange()"
 >
 </ngx-intl-tel-input>
