--- a/src/app/core/components/pick-list/pick-list.component.html
+++ b/src/app/core/components/pick-list/pick-list.component.html
@@ -1,6 +1,6 @@
 <p-pickList
   [source]="source"
-  [target]="target"
+  [target]="value"
   sourceHeader="Disponibles"
   targetHeader="Seleccionados"
   [responsive]="true"
