dialogService & dragdrop picklist

--- a/src/app/core/components/pick-list/pick-list.component.html
+++ b/src/app/core/components/pick-list/pick-list.component.html
@@ -4,6 +4,7 @@
   sourceHeader="Disponibles"
   targetHeader="Seleccionados"
   [responsive]="true"
+  [dragdrop]="true"
   [showTargetControls]="false"
   [showSourceControls]="false"
   [showTargetFilter]="false"
