--- a/src/app/models/balances/components/recharge-balance/recharge-balance.component.html
+++ b/src/app/models/balances/components/recharge-balance/recharge-balance.component.html
@@ -45,3 +45,5 @@
     </form>
   </ng-template>
 </p-card>
+
+<p-confirmDialog header="CONFIRMACÍON" icon="pi pi-exclamation-triangle"></p-confirmDialog>
