--- a/src/app/models/videogames/components/recharge-videogame/recharge-videogame.component.html
+++ b/src/app/models/videogames/components/recharge-videogame/recharge-videogame.component.html
@@ -13,6 +13,16 @@
         </div>
       </div>
 
+      <div class="p-field max-w-xl mx-auto">
+        <label>ID DEL JUGADOR</label>
+        <input type="text" required pInputText formControlName="playerId" />
+      </div>
+
+      <div class="p-field max-w-xl mx-auto">
+        <label>INFORMACIÓN ADICIONAL</label>
+        <input type="text" required pInputText formControlName="additionalField" />
+      </div>
+
       <div class="p-field w-full text-center">
         <label>OPCIONES</label>
         <app-pick-list formControlName="charge"></app-pick-list>
