partial history funcionalidad

--- a/src/app/models/videogames/components/recharge-videogame/recharge-videogame.component.html
+++ b/src/app/models/videogames/components/recharge-videogame/recharge-videogame.component.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="p-field max-w-xl mx-auto">
-        <label>ID DEL JUGADOR</label>
+        <label>(ID DEL JUGADOR, UUID, CUID)</label>
         <input type="text" required pInputText formControlName="playerId" />
       </div>
 
