--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,6 @@
 
 .main__content {
   min-height: 95vh;
-  background: url(/assets/images/background/blob.svg) no-repeat;
   background-size: cover;
   z-index: -1;
 }
@@ -54,4 +53,12 @@
 
 .p-button-label {
   @apply uppercase;
+}
+
+.p-datatable .p-sortable-column:not(.p-highlight):hover {
+  @apply bg-gray-800;
+}
+
+.p-datatable .p-sortable-column.p-highlight:hover {
+  background: #1f2d40;
 }
