mejoras en el responsive

--- a/src/app/core/components/input-phone/input-phone.component.html
+++ b/src/app/core/components/input-phone/input-phone.component.html
@@ -10,5 +10,6 @@
   [numberFormat]="PhoneNumberFormat.National"
   [(ngModel)]="value"
   (ngModelChange)="onChange()"
+  class="block"
 >
 </ngx-intl-tel-input>
