--- a/src/app/pages/dashboard/pages/home/home.component.html
+++ b/src/app/pages/dashboard/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="p-5 flex flex-wrap justify-center gap-4">
+<section class="md:p-5 flex flex-wrap justify-center gap-4">
   <p-card styleClass="shadow-sm shadow-gray-800 w-[350px] h-[450px]">
     <ng-template pTemplate="header">
       <img alt="card-header" src="assets/images/background/authentication.jpg" />
