--- a/src/app/core/components/pick-list/pick-list.component.html
+++ b/src/app/core/components/pick-list/pick-list.component.html
@@ -26,4 +26,4 @@
   </ng-template>
 </p-pickList>
 
-<p class="font-bold text-2xl">{{ total }}</p>
+<p class="font-bold text-2xl text-center">{{ total }}</p>
