--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -17,7 +17,7 @@
       [model]="items"
       styleClass="p-button-secondary"
     ></p-splitButton>
-    <p-avatar [label]="user | avatarLabel" styleClass="mx-5" size="large" class="uppercase"></p-avatar>
+    <p-avatar [label]="user | avatarLabel" styleClass="mx-5" size="large" class="uppercase hidden md:block"></p-avatar>
   </div>
 </p-toolbar>
 
