--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  @apply bg-gray-600 rounded-md;
+  @apply bg-gray-900 rounded-md;
 }
 
 .p-avatar-text {
@@ -61,4 +61,9 @@
 
 .p-datatable .p-sortable-column.p-highlight:hover {
   background: #1f2d40;
+}
+
+.p-dialog {
+  @apply h-screen w-screen md:w-10/12 md:h-5/6;
+  max-height: 100% !important;
 }
