confirm dialog styles

--- a/src/app/models/balances/components/recharge-balance/recharge-balance.component.html
+++ b/src/app/models/balances/components/recharge-balance/recharge-balance.component.html
@@ -44,4 +44,4 @@
   </ng-template>
 </p-card>
 
-<p-confirmDialog header="CONFIRMACÍON" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+<p-confirmDialog></p-confirmDialog>
