refactoring style.scss

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-toolbar *ngIf="isUserLogin"></app-toolbar>
-<main class="py-5">
+<main>
   <router-outlet></router-outlet>
 </main>
 <app-footer *ngIf="isUserLogin"></app-footer>
