--- a/src/app/pages/authentication/authentication.component.scss
+++ b/src/app/pages/authentication/authentication.component.scss
@@ -1,4 +1,4 @@
-.main__content {
+.img__background {
   background: url(/assets/images/background/authentication.jpg) no-repeat top left;
   background-size: cover;
 }
