--- a/src/app/pages/authentication/authentication.component.html
+++ b/src/app/pages/authentication/authentication.component.html
@@ -1,3 +1,3 @@
-<section class="main__content h-screen w-screen flex items-center justify-center xl:justify-end xl:pr-28">
+<section class="img__background h-screen w-screen flex items-center justify-center xl:justify-end xl:pr-28">
   <router-outlet></router-outlet>
 </section>
