history table responsive

--- a/src/app/pages/history/components/table/table.component.html
+++ b/src/app/pages/history/components/table/table.component.html
@@ -9,6 +9,7 @@
   [globalFilterFields]="['name', 'phoneNumber', 'status', 'reference']"
   [resizableColumns]="true"
   columnResizeMode="expand"
+  [scrollable]="true"
   class="w-full md:px-10 px-3 mt-10"
   #table
 >
