--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -7,5 +7,5 @@
 
   <app-global-search *ngIf="showGlobalSearch" (onSearch)="setData($event)"></app-global-search>
 
-  <app-table [cols]="cols" [data]="data"></app-table>
+  <app-table [cols]="cols" [data]="data" class="w-11/12 lg:w-9/12"></app-table>
 </section>
